# pydantic-ai-absurd

./: .gitignore  README.md  pyproject.toml  zensical.toml
.github/workflows/: main.yml  publish.yml
docs/: deployment.md  durability.md  index.md  mcp.md  troubleshooting.md  tutorial.md
examples/: durable_run.py  readme_snippet.py  vercel_starlette.py  vercel_starlette_server.py
examples/tests/: conftest.py  test_examples.py
pydantic_ai_absurd/: __init__.py  _agent.py  _function_toolset.py  _mcp.py  _model.py  _utils.py
scripts/: build  check  coverage  install  postgres  test
src/agent-sessions/: ARCHITECTURE.md  README.md  pyproject.toml
src/agent-sessions/agent_sessions/: __init__.py  _pydantic_ai.py  brain.py  events.py  migrations.py  session.py  wake.py  worker.py  workflow.py
src/agent-sessions/agent_sessions/schema/: __init__.py  agent_sessions.sql  migrations.sql
src/agent-sessions/agent_sessions/schema/migrations/: 0.0.1-0.0.2.sql
src/agent-sessions/tests/: conftest.py  test_brain.py  test_crash_recovery.py  test_listen.py  test_migrations.py  test_pool_sizing.py  test_pydantic_ai_adapter.py  test_session.py  test_wake.py  test_workflow.py
src/pydantic-ai-absurd/: README.md  pyproject.toml
src/pydantic-ai-absurd/pydantic_ai_absurd/: __init__.py  _agent.py  _fastmcp_toolset.py  _mcp.py  _mcp_server.py
src/pydantic-ai-absurd/tests/: conftest.py  test_agent.py  test_mcp.py  test_model.py  test_replay.py
src/pydantic-ai-absurd/tests/fixtures/: mcp_server.py
tests/: test_agent.py  test_function_toolset.py  test_mcp.py  test_model.py  test_replay.py  test_utils.py
