[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ai-absurd"
version = "0.0.1"
description = "Durable execution of Pydantic AI agents on Postgres via Absurd."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic-ai>=2.0.0b1",
    "absurd-sdk>=0.4.0",
    "typing-extensions>=4.10.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "mypy==1.18.2",
    "ruff==0.15.4",
    "pytest==9.0.3",
    "anyio>=4.8.0",
    "dirty-equals==0.10.0",
    "testcontainers[postgres]>=4.14",
    "psycopg[binary]>=3.0.0",
    # pydantic-ai v2's `mcp` extra ships fastmcp-slim[client] only; the test
    # fixtures spin up a real MCP server, which needs the server support.
    "fastmcp-slim[server]>=3.3.0",
]

[tool.uv]
default-groups = ["dev"]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai_absurd"]

[tool.hatch.build.targets.sdist]
include = ["pydantic_ai_absurd", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "FA",
    "UP",
    "RUF100",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
files = ["pydantic_ai_absurd", "tests"]

[[tool.mypy.overrides]]
module = "absurd_sdk.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

# The anthropic SDK (pulled transitively via pydantic-ai) crashes mypy 1.16.1
# during analysis; we never import it directly, so don't follow into it.
[[tool.mypy.overrides]]
module = "anthropic.*"
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring a running Postgres (via testcontainers)",
]

[tool.coverage.run]
source_pkgs = ["pydantic_ai_absurd", "tests"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]
